--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,316 +1,2 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-image: url('../images/bg-2.png');
-}
-
-header {
-    background-color: orangered;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header div.logo {
-    margin-top: 5px;
-    margin-left: 5px;
-}
-
-header .boton {
-    margin-right: 5px;
-}
-
-header .boton i {
-    font-size: 20px;
-    color: white;
-}
-
-header .menu {
-  display: none;
-}
-
-main .articulos {
-    margin: 20px auto 0;
-    background-color: white;
-    width: 90%;
-}
-
-main .articulos article {
-    padding: 8px;
-    display: flex;
-    flex-direction: column;
-}
-
-main .articulos article div h3 {
-    margin-top: 10px;
-}
-
-main .articulos article div p {
-    margin-top: 10px;
-}
-
-main .articulos article a {
-    margin-top: 5px;
-    padding: 6px;
-    background-color: orangered;
-    align-self: flex-start;
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
-}
-
-main .tutoriales {
-    margin: 20px auto 0;
-    width: 90%;
-}
-
-main .tutoriales .titulo {
-    margin: 15px 0;
-    background-color: white;
-    height: 35px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-main .tutoriales .titulo h3 {
-    font-size: 30px;
-}
-
-main .tutoriales .contenedor div {
-    display: flex;
-    align-items: center;
-    background-color: white;
-    margin-bottom: 5px;
-    padding: 10px;
-}
-
-main .tutoriales .contenedor div p {
-    margin-left: 5px;
-}
-
-main .publicidad {
-    margin: 20px auto 0;
-    width: 90%;
-}
-
-main .publicidad .titulo {
-    margin: 15px 0;
-    background-color: white;
-    height: 35px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-main .publicidad .titulo h3 {
-    font-size: 30px;
-}
-
-main .publicidad .contenedor {
-    background-color: white;
-    height: 540px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 80px;
-}
-
-main .publicidad .contenedor div {
-    padding: 5px;
-}
-
-footer {
-    background-color: orangered;
-    height: 170px;
-}
-
-footer .redes {
-    text-align: center;
-    padding-top: 15px;
-}
-
-footer .redes a {
-    text-decoration: none;
-    color: white;
-    font-size: 40px;
-    margin-right: 10px;
-}
-
-footer .info {
-    text-align: center;
-    padding-top: 15px;
-}
-
-footer .info ul li {
-    margin-bottom: 10px;
-}
-
-footer .info ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-/* MEDIA QUERY TABLET */
-
-@media (min-width: 480px) {
-  header .boton i {
-    font-size: 25px;
-  }
-
-  main .articulos article {
-    align-items: center;
-  }
-
-  main .articulos article div img {
-    margin-top: 10px;
-  }
-
-  main .articulos article .infoProducto {
-    margin-left: 30px;
-  }
-
-  main .articulos article a {
-    margin-left: 30px;
-  }
-
-  footer .info ul li a {
-    font-size: 17px;
-  }
-}
-
-/* MEDIA QUERY LAPTOP */
-
-@media (min-width: 760px) {
-  header .boton {
-    display: none;
-  }
-
-  header .menu {
-    display: flex;
-    width: 85%;
-    justify-content: space-between;
-  }
-
-  header .menu .categorias {
-    display: flex;
-  }
-
-  header .menu .categorias li {
-    list-style: none;
-    margin-right: 15px;
-  }
-
-  header .menu .categorias li a {
-    color: white;
-    text-decoration: none;
-  }
-
-  header .menu .lista {
-    display: flex;
-  }
-
-  header .menu .lista li {
-    list-style: none;
-    margin-right: 15px;
-  }
-
-  header .menu .lista li a {
-    color: white;
-    text-decoration: none;
-  }
-
-  main .articulos {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  main .articulos article {
-    width: 50%;
-  }
-
-  main .aside {
-    display: flex;
-  }
-
-  main .tutoriales {
-    width: 50%;
-    margin-right: 10px;
-    margin-left: 15px;
-  }
-
-  main .publicidad {
-    width: 50%;
-  }
-
-  main .publicidad .titulo {
-    width: 350px;
-  }
-
-  main .publicidad .contenedor {
-    width: 350px;
-    height: 435px;
-  }
-
-  main .publicidad div{
-    width: 244px;
-  }
-
-  main .publicidad div img{
-    width: 100%;
-  }
-
-  footer .redes {
-    margin-left: 31%;
-    width: 50%;
-  }
-
-  footer .redes a {
-    font-size: 45px;
-    margin-right: 75px;
-  }
-
-  footer .info ul li a {
-    font-size: 19px;
-  }
-}
-
-/* MEDIA QUERY DESKTOP */
-
-@media (min-width: 1250px){
-  header {
-    height: 60px;
-  }
-
-  header .menu ul li a {
-    font-size: 18px;
-  }
-
-  main {
-    display: flex;
-    margin-bottom: 15px;
-  }
-
-  main .articulos {
-    margin-left: 15px;
-    width: 75%;
-  }
-
-  main .aside {
-    flex-direction: column;
-    width: 25%;
-    margin-left: 10px;
-  }
-
-  main .tutoriales {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  main .publicidad {
-    width: 100%;
-  }
-}
+@import url('./index.css');
+@import url('./register.css');
